gtk4: fix missing border around dialogs

--- a/gtk-3.0/widgets/headerbar.css
+++ b/gtk-3.0/widgets/headerbar.css
@@ -15,6 +15,7 @@ searchbar {
     border-bottom-width: 1px;
 }
 
+.dialog.csd,
 .csd decoration {
     border-width: 1px;
 }
